Add ordered and unordered lists to index.html
Created ordered and unordered lists in the HTML file
to structure content better. This improves readability
and organization of the webpage.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>My First Webpage</title>
 </head>
+
+<body>
+    <h1>My First Website</h1>
+
+    <!-- <em> for emphasis making my text italic -->
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <Strong>Blanditiis ea vel optio vitae</Strong>
+        voluptatem obcaecati laudantium ex molestiae, <em> ipsam iste ratione amet dolor laborum,</em> fugiat sapiente
+        sint? Non?</p>
+    <p>Building my first Webpage</p>
+    <p>This is cool</p>
+
+    <u1>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+
+    </u1>
+
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
+
+</body>
+
 </html>
